src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>ByPassValidations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ByPassValidations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_End__c</fullName>
        <description>Call End</description>
        <inlineHelpText>Call End</inlineHelpText>
        <label>Call End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Call_Start__c</fullName>
        <description>Call Start</description>
        <inlineHelpText>Call Start</inlineHelpText>
        <label>Call Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Co_Worker_Comments__c</fullName>
        <description>Allows anyone to edit the task with comments. All other fields may be locked, but this one is not.</description>
        <inlineHelpText>Allows anyone to edit the task with comments. All other fields may be locked, but this one is not.</inlineHelpText>
        <label>Co-Worker Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CurrentUserProfile__c</fullName>
        <formula>$Profile.Name</formula>
        <label>CurrentUserProfile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalation_Email_Status__c</fullName>
        <label>Escalation Email Status</label>
        <picklist>
            <picklistValues>
                <fullName>IntelliBEDUser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ColinHouse</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone_c__c</fullName>
        <description>A custom phone field for capturing phone numbers from other sources.</description>
        <inlineHelpText>A custom phone field for capturing phone numbers from other sources.</inlineHelpText>
        <label>Phone (c)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TDSF__TimeDriver_Id__c</fullName>
        <label>TimeDriver Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__pardot_source_id__c</fullName>
        <description>Identifies the Pardot record that caused this activity to be created.</description>
        <externalId>true</externalId>
        <label>Pardot Source Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Everything</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>